<resources>
    <string name="app_name"> </string>
    <string name="acoes">Ações</string>
    <string name="carteira">Carteira</string>
    <string name="email">E-mail</string>
    <string name="senha">Senha</string>
    <string name="lembrar">Lembrar</string>
    <string name="entrar">Entrar</string>
    <string name="novoPorAqui">Novo por aqui?</string>
    <string name="repetirSenha">Repita a senha</string>
    <string name="nome">Nome</string>
    <string name="dataNascimento">Data de Nascimento</string>
    <string name="registrar">Registrar</string>
    <string name="masculino">Masculino</string>
    <string name="feminino">Feminino</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="sair">Sair</string>
    <string name="semNoticia">Nenhuma notícia disponível</string>
    <string name="noticias">Notícias</string>
    <string name="fundos_imobiliarios">Fundos Imobiliários</string>
    <string name="bdr">BDR</string>
    <string name="mercado">Mercado</string>
    <string name="modoNorturno">Noturno</string>
    <string name="modoDiurno">Modo diurno</string>
    <string name="switchTheme">Switch</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="variacaoValor">Variação do valor</string>
    <string name="comprar">Comprar</string>
    <string name="saldo">Insira o saldo</string>
    <string name="cancelar">Cancelar</string>
    <string name="confirmar">Confirmar</string>
    <string name="inserirSaldo">Inserir Saldo</string>
    <string name="adicionarFundos">Adicionar fundos a carteira</string>
    <string name="mais">+</string>
    <string name="menos">-</string>
    <string name="vender">Vender</string>
    <string name="sacarDinheiro">Sacar dinheiro</string>
</resources>